[feat]: [CDS-86006]: adding logic for traffic routing step inherit option and… (#57170)
* [CDS-86006]: adding logic for traffic routing step inherit option and some other code optimization

* [CDS-86006]: adding logic for traffic routing step inherit option and some other code optimization

* [CDS-86006]: code clean up

* [CDS-86006]: code clean up

* [CDS-86006]: updating BG deploy and TrafficRouting tasks UTs

* [CDS-86006]: removing unnecessary classes

* [CDS-86006]: updating TrafficRouting logic

* [CDS-86006]: updating TrafficRouting UTs

* [CDS-86006]: updating TrafficRouting logic

* [CDS-86006]: updating k8s UTs in regards to traffic routing changes