@@ -9,6 +9,7 @@ package io.harness.delegate.k8s.trafficrouting;
 
 import static io.harness.data.structure.EmptyPredicate.isEmpty;
 import static io.harness.data.structure.EmptyPredicate.isNotEmpty;
+import static io.harness.logging.LogLevel.WARN;
 
 import static java.lang.String.format;
 
@@ -33,15 +34,21 @@ import io.harness.k8s.model.smi.Match;
 import io.harness.k8s.model.smi.Metadata;
 import io.harness.k8s.model.smi.RouteMatch;
 import io.harness.k8s.model.smi.RouteSpec;
+import io.harness.k8s.model.smi.RouteSpecGsonDeserializer;
 import io.harness.k8s.model.smi.SMIRoute;
 import io.harness.k8s.model.smi.TrafficSplit;
 import io.harness.k8s.model.smi.TrafficSplitSpec;
+import io.harness.logging.LogCallback;
 
 import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
 import io.kubernetes.client.util.Yaml;
 import java.util.ArrayList;
+import java.util.Collection;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -50,6 +57,7 @@ import java.util.stream.Stream;
 import lombok.NoArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.RandomStringUtils;
+import org.apache.commons.lang3.tuple.Pair;
 
 @NoArgsConstructor
 @Slf4j
@@ -64,22 +72,20 @@ public class SMITrafficRoutingResourceCreator extends TrafficRoutingResourceCrea
 
   static final String SPLIT = "split";
   static final String SPECS = "specs";
-  private static final String PATCH_FORMAT = "[ { \"op\": \"replace\", \"path\": \"/spec/backends\", \"value\": %s }]";
+  private static final String BACKENDS_PATH = "/spec/backends";
   private static final Map<String, List<String>> SUPPORTED_API_MAP = Map.of(SPLIT,
       List.of("split.smi-spec.io/v1alpha1", "split.smi-spec.io/v1alpha2", "split.smi-spec.io/v1alpha3",
           "split.smi-spec.io/v1alpha4"),
       SPECS,
       List.of("specs.smi-spec.io/v1alpha1", "specs.smi-spec.io/v1alpha2", "specs.smi-spec.io/v1alpha3",
           "specs.smi-spec.io/v1alpha4"));
-
-  public SMITrafficRoutingResourceCreator(K8sTrafficRoutingConfig k8sTrafficRoutingConfig) {
-    super(k8sTrafficRoutingConfig);
-  }
+  private Gson gson = new GsonBuilder().registerTypeAdapter(RouteSpec.class, new RouteSpecGsonDeserializer()).create();
 
   @Override
-  protected List<String> getManifests(
-      String namespace, String releaseName, String stableName, String stageName, Map<String, String> apiVersions) {
-    TrafficSplit trafficSplit = getTrafficSplit(namespace, releaseName, stableName, stageName, apiVersions.get(SPLIT));
+  protected List<String> getManifests(K8sTrafficRoutingConfig k8sTrafficRoutingConfig, String namespace,
+      String releaseName, String stableName, String stageName, Map<String, String> apiVersions) {
+    TrafficSplit trafficSplit =
+        getTrafficSplit(k8sTrafficRoutingConfig, namespace, releaseName, stableName, stageName, apiVersions.get(SPLIT));
 
     List<SMIRoute> smiRoutes =
         getSMIRoutes(k8sTrafficRoutingConfig.getRoutes(), namespace, releaseName, apiVersions.get(SPECS));
@@ -87,7 +93,7 @@ public class SMITrafficRoutingResourceCreator extends TrafficRoutingResourceCrea
     applyRoutesToTheTrafficSplit(trafficSplit, smiRoutes);
     List<String> trafficRoutingManifests = new ArrayList<>();
     trafficRoutingManifests.add(Yaml.dump(trafficSplit));
-    trafficRoutingManifests.addAll(smiRoutes.stream().map(Yaml::dump).toList());
+    trafficRoutingManifests.addAll(smiRoutes.stream().map(Yaml::dump).collect(Collectors.toList()));
 
     return trafficRoutingManifests;
   }
@@ -114,7 +120,7 @@ public class SMITrafficRoutingResourceCreator extends TrafficRoutingResourceCrea
           Backend.builder().service(stable).weight(100).build(), Backend.builder().service(stage).weight(0).build());
 
       try {
-        return Optional.of(format(PATCH_FORMAT,
+        return Optional.of(format(format("[%s]", PATCH_REPLACE_JSON_FORMAT), BACKENDS_PATH,
             new ObjectMapper().setSerializationInclusion(JsonInclude.Include.NON_NULL).writeValueAsString(backends)));
       } catch (JsonProcessingException e) {
         log.warn("Failed to Deserialize List of Backends", e);
@@ -123,30 +129,37 @@ public class SMITrafficRoutingResourceCreator extends TrafficRoutingResourceCrea
     return Optional.empty();
   }
 
-  private TrafficSplit getTrafficSplit(
-      String namespace, String releaseName, String stableName, String stageName, String apiVersion) {
+  private TrafficSplit getTrafficSplit(K8sTrafficRoutingConfig k8sTrafficRoutingConfig, String namespace,
+      String releaseName, String stableName, String stageName, String apiVersion) {
     String name = getTrafficRoutingResourceName(stableName, TRAFFIC_SPLIT_SUFFIX, TRAFFIC_SPLIT_DEFAULT_NAME);
     Metadata metadata = getMetadata(name, namespace, releaseName);
     String rootService = getRootService((SMIProviderConfig) k8sTrafficRoutingConfig.getProviderConfig(), stableName);
     rootService = updatePlaceHoldersIfExist(rootService, stableName, stageName);
 
+    Map<String, Pair<Integer, Integer>> destinations = destinationsToMap(k8sTrafficRoutingConfig.getDestinations());
+
+    Map<String, Pair<Integer, Integer>> normalizedDestinations = normalizeDestinations(destinations, 100);
+
     return TrafficSplit.builder()
         .metadata(metadata)
         .apiVersion(apiVersion)
         .spec(TrafficSplitSpec.builder()
-                  .backends(getBackends(k8sTrafficRoutingConfig.getNormalizedDestinations(), stableName, stageName))
+                  .backends(getBackends(normalizedDestinations, stableName, stageName))
                   .service(rootService)
                   .build())
         .build();
   }
 
   private List<Backend> getBackends(
-      List<TrafficRoutingDestination> normalizedDestinations, String stableName, String stageName) {
-    return normalizedDestinations.stream()
-        .map(dest
+      Map<String, Pair<Integer, Integer>> normalizedDestinations, String stableName, String stageName) {
+    return normalizedDestinations.keySet()
+        .stream()
+        .map(host
             -> Backend.builder()
-                   .service(updatePlaceHoldersIfExist(dest.getHost(), stableName, stageName))
-                   .weight(dest.getWeight())
+                   .service(updatePlaceHoldersIfExist(host, stableName, stageName))
+                   .weight(normalizedDestinations.get(host).getRight() != null
+                           ? normalizedDestinations.get(host).getRight()
+                           : normalizedDestinations.get(host).getLeft())
                    .build())
         .collect(Collectors.toList());
   }
@@ -220,5 +233,103 @@ public class SMITrafficRoutingResourceCreator extends TrafficRoutingResourceCrea
               .map(route -> RouteMatch.builder().kind(route.getKind()).name(route.getMetadata().getName()).build())
               .collect(Collectors.toList()));
     }
+  }
+
+  @Override
+  public Optional<String> generateTrafficRoutingPatch(
+      K8sTrafficRoutingConfig k8sTrafficRoutingConfig, Object trafficRoutingClusterResource, LogCallback logCallback) {
+    List<String> listOfPatches = new ArrayList<>();
+    try {
+      String trafficRoutingClusterResourceJson = gson.toJson(trafficRoutingClusterResource);
+      TrafficSplit trafficSplit = gson.fromJson(trafficRoutingClusterResourceJson, TrafficSplit.class);
+
+      listOfPatches.addAll(createPatchForTrafficRoutingResourceDestinations(
+          super.destinationsToMap(k8sTrafficRoutingConfig.getDestinations()), trafficSplit.getSpec().getBackends(),
+          logCallback));
+    } catch (Exception e) {
+      log.error("Failed to parse Traffic Split resource from the cluster.", e);
+      throw e;
+    }
+
+    if (listOfPatches.size() > 0) {
+      return Optional.of(listOfPatches.toString());
+    }
+
+    return Optional.empty();
+  }
+
+  protected Collection<String> createPatchForTrafficRoutingResourceDestinations(
+      Map<String, Pair<Integer, Integer>> configuredDestinations, List<Backend> backendList, LogCallback logCallback) {
+    List<String> patches = new ArrayList<>();
+    if (backendList != null) {
+      // looping through destinations and checking for matching destinations
+      Map<String, Pair<Integer, Integer>> clusterResourceDestinations = destinationsToMap(backendList);
+
+      for (String trafficRoutingDestinationHost : configuredDestinations.keySet()) {
+        if (clusterResourceDestinations.containsKey(trafficRoutingDestinationHost)) {
+          clusterResourceDestinations.put(trafficRoutingDestinationHost,
+              Pair.of(clusterResourceDestinations.get(trafficRoutingDestinationHost).getLeft(),
+                  configuredDestinations.get(trafficRoutingDestinationHost).getLeft()));
+        } else {
+          String warningMessage = format("Traffic Routing Destination [%s] not found in the Virtual Service resource",
+              trafficRoutingDestinationHost);
+          log.warn(warningMessage);
+          logCallback.saveExecutionLog(warningMessage, WARN);
+        }
+      }
+
+      Pair<Map, Map> filteredDestinations = filterDestinations(clusterResourceDestinations);
+      if (shouldNormalizeDestinations(filteredDestinations)) {
+        Map<String, Pair<Integer, Integer>> normalizedDestinations =
+            normalizeFilteredDestinations(filteredDestinations);
+        logDestinationsNormalization(normalizedDestinations, logCallback);
+        // creating a patch for this particular route type and route with updated destinations
+        try {
+          patches.add(format(PATCH_REPLACE_JSON_FORMAT, BACKENDS_PATH,
+              new ObjectMapper()
+                  .setSerializationInclusion(JsonInclude.Include.NON_NULL)
+                  .writeValueAsString(mapToDestinations(normalizedDestinations))));
+        } catch (JsonProcessingException e) {
+          log.warn("Failed to Deserialize List of VirtualServiceDetails", e);
+        }
+      }
+    }
+    return patches;
+  }
+
+  @Override
+  public Map<String, Pair<Integer, Integer>> destinationsToMap(List sourceDestinations) {
+    Map<String, Pair<Integer, Integer>> outDestinations = new LinkedHashMap<>();
+    if (sourceDestinations != null && sourceDestinations.size() > 0) {
+      if (sourceDestinations.get(0) instanceof TrafficRoutingDestination) {
+        return super.destinationsToMap(sourceDestinations);
+      }
+
+      ((List<Backend>) sourceDestinations).forEach(sourceDestination -> {
+        outDestinations.put(sourceDestination.getService(),
+            Pair.of(sourceDestination.getWeight() == null || sourceDestination.getWeight() < 0
+                    ? null
+                    : sourceDestination.getWeight(),
+                null));
+      });
+    }
+    return outDestinations;
+  }
+
+  @Override
+  protected List<Backend> mapToDestinations(Map<String, Pair<Integer, Integer>> sourceDestinations) {
+    List<Backend> outDestinations = new ArrayList<>();
+    if (sourceDestinations != null && sourceDestinations.size() > 0) {
+      for (String sourceDestinationKey : sourceDestinations.keySet()) {
+        Pair<Integer, Integer> weights = sourceDestinations.get(sourceDestinationKey);
+        outDestinations.add(Backend.builder()
+                                .service(sourceDestinationKey)
+                                .weight(weights.getRight() != null && weights.getRight() >= 0 ? weights.getRight()
+                                        : weights.getLeft() != null && weights.getLeft() >= 0 ? weights.getLeft()
+                                                                                              : null)
+                                .build());
+      }
+    }
+    return outDestinations;
   }
 }
